--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,3 +7,8 @@ p {
   margin-top: 2rem!important;
   margin-bottom: 1rem!important;
 }
+
+a {
+  text-decoration: none;
+  color: inherit !important;
+}
