--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,9 @@
-.v-application {
+/* .v-application {
   font-weight: 700;
-}
+} */
 
 p {
-  font-weight: 600!important;
-  margin-top: 2rem!important;
-  margin-bottom: 1rem!important;
+  margin-top: 1rem!important;
 }
 
 a {
