--- a/assets/css/iconfont/material-icons.css
+++ b/assets/css/iconfont/material-icons.css
@@ -8,6 +8,7 @@
        url(MaterialIcons-Regular.woff2) format('woff2'),
        url(MaterialIcons-Regular.woff) format('woff'),
        url(MaterialIcons-Regular.ttf) format('truetype');
+  font-display: swap;
 }
 
 .material-icons {
@@ -15,6 +16,7 @@
   font-weight: normal;
   font-style: normal;
   font-size: 24px;  /* Preferred icon size */
+  font-display: swap;
   display: inline-block;
   line-height: 1;
   text-transform: none;
